modified:   Web/app.py 	deleted:    Web/static/css/marine_laws.css 	deleted:    Web/static/js/marine_laws.js 	modified:   Web/templates/about.html 	modified:   Web/templates/base.html 	deleted:    Web/templates/marine_laws.html

--- a/Web/templates/about.html
+++ b/Web/templates/about.html
@@ -20,38 +20,45 @@
             <h2 class="text-center mb-4">Our Team</h2>
             <div class="row">
                 <!-- Team Member 1 -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card shadow-3d">
                         <img src="{{ url_for('static', filename='images/team1.jpg') }}" class="card-img-top" alt="Team Member 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Jane Doe</h5>
-                            <p class="card-text">Founder & Marine Biologist</p>
+                            <h5 class="card-title">Lavish</h5>
                         </div>
                     </div>
                 </div>
                 <!-- Team Member 2 -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card shadow-3d">
                         <img src="{{ url_for('static', filename='images/team2.jpg') }}" class="card-img-top" alt="Team Member 2">
                         <div class="card-body text-center">
-                            <h5 class="card-title">John Smith</h5>
-                            <p class="card-text">Project Manager & Environmental Scientist</p>
+                            <h5 class="card-title">Deevesh</h5>
                         </div>
                     </div>
                 </div>
                 <!-- Team Member 3 -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card shadow-3d">
                         <img src="{{ url_for('static', filename='images/team3.jpg') }}" class="card-img-top" alt="Team Member 3">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Emily Johnson</h5>
-                            <p class="card-text">Community Outreach Coordinator</p>
+                            <h5 class="card-title">Immanuel</h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- Team Member 4 -->
+                <div class="col-md-3">
+                    <div class="card shadow-3d">
+                        <img src="{{ url_for('static', filename='images/team4.jpg') }}" class="card-img-top" alt="Team Member 4">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Christa</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- Our Mission Section -->
     <section class="our-mission py-5">
