--- a/Web/templates/base.html
+++ b/Web/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +15,18 @@
     <!-- Favicon -->
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 </head>
+
 <body>
     <!-- Header with Navigation -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
             <a class="navbar-brand" href="{{ url_for('home') }}">
-                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="SaveTheBlu" class="img-fluid" style="max-height: 50px;">
+                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="SaveTheBlu" class="img-fluid"
+                    style="max-height: 50px;">
                 #SaveTheBlu
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -31,14 +35,14 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('maps') }}">Maps</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('elearning') }}">E-Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('marine_laws') }}">Marine Laws</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('volunteer') }}">Volunteer</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('donate') }}">Donate</a></li>
                     {% if 'user' in session %}
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('profile') }}">Profile</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('profile') }}">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                     {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}"><i class="fas fa-user"></i>
+                            Login</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -57,8 +61,10 @@
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="{{ url_for('about') }}" class="text-white">About Us</a></li>
                 <li class="list-inline-item"><a href="{{ url_for('contact') }}" class="text-white">Contact</a></li>
-                <li class="list-inline-item"><a href="{{ url_for('privacy') }}" class="text-white">Privacy Policy</a></li>
-                <li class="list-inline-item"><a href="{{ url_for('terms') }}" class="text-white">Terms of Service</a></li>
+                <li class="list-inline-item"><a href="{{ url_for('privacy') }}" class="text-white">Privacy Policy</a>
+                </li>
+                <li class="list-inline-item"><a href="{{ url_for('terms') }}" class="text-white">Terms of Service</a>
+                </li>
                 <li class="list-inline-item"><a href="{{ url_for('faq') }}" class="text-white">FAQs</a></li>
             </ul>
             <div class="social-icons mt-3">
@@ -87,4 +93,5 @@
     <!-- Custom JS -->
     <script src="{{ url_for('static', filename='js/' + js_file) }}"></script>
 </body>
+
 </html>
