--- a/Web/templates/home.html
+++ b/Web/templates/home.html
@@ -4,9 +4,9 @@
     <!-- Hero Section with Parallax Effect -->
     <section class="hero text-white text-center py-5" style="background-image: url('{{ url_for('static', filename='images/ocean-background.jpg') }}'); background-attachment: fixed; background-size: cover; background-position: center;">
         <div class="container">
-            <h1 class="display-4 animated fadeIn">Welcome to #SaveTheBlu</h1>
+            <h1 class="display-4 animated fadeIn">Welcome to Edutainment</h1>
             <p class="lead animated fadeIn">Join us in protecting and raising awareness about the marine ecosystem in Mauritius.</p>
-            <a href="{{ url_for('about') }}" class="btn btn-light btn-lg animated fadeIn">Learn More About Us</a>
+            <a href="{{ url_for('about') }}" class="btn btn-light btn-lg animated fadeIn">Want to try our game?</a>
         </div>
     </section>
 
